# cpp-operation-log

./: .gitattributes  CMakeLists.txt  README.md  get-build-environment.sh  operationlog.pc.in
doc/examples/html-log-sphere-tesselation/: example-code.md  operation-log.html
docs/: README.md  _config.yml
docs/_posts/: 2018-02-27-log-macros.md  2018-02-28-log-configuration.md  2018-03-01-value-formatters-for-custom-data-types.md  2018-03-02-html-log-sphere-tesselation.md
docs/assets/css/: style.scss
docs/css/: main.scss
docs/examples/html-log-sphere-tesselation/: example-code.md
include/: operation_log.h
include/operation_log/: cpp_parsing.h  disable.h  enable.h  formatter_base.h  forward_declarations.h  function_entry.h  function_info.h  html_formatter.h  html_utils.h  message_stream.h  operation_log.h  operation_log_instance.h  plain_text_formatter.h  predicate.h  type_traits.h  value_formatter.h  value_formatter_base.h  value_formatter_i.h
include/operation_log/html_formatter/: three_js.h
include/operation_log/value_formatters/: string.h  tuple.h
